--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "private": true,
   "dependencies": {
     "koa": "^2.6.2"
+  },
+  "devDependencies": {
+    "@types/webpack": "^4.4.22",
+    "webpack": "^4.28.4"
   }
 }
