--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/webpack": "^4.4.22",
-    "webpack": "^4.28.4"
+    "webpack": "^4.29.0",
+    "webpack-merge": "^4.2.1"
   }
 }
