--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "koa": "^2.6.2"
   },
   "devDependencies": {
-    "@types/webpack": "^4.4.22",
+    "@types/node": "^10.12.18",
+    "@types/webpack": "^4.4.23",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1"
   }
