--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^10.12.18",
     "@types/webpack": "^4.4.23",
+    "@types/webpack-merge": "^4.1.3",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1"
   }
