--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "koa": "^2.6.2"
   },
   "devDependencies": {
+    "@types/compression-webpack-plugin": "^2.0.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
+    "compression-webpack-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1"
