--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.29.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
