--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^10.12.18",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
+    "@types/webpack-node-externals": "^1.6.3",
     "compression-webpack-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.29.0",
