--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "compression-webpack-plugin": "^2.0.0",
+    "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1",
