--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "koa": "^2.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
+    "babel-loader": "^8.0.5",
     "compression-webpack-plugin": "^2.0.0",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
