--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
@@ -19,9 +21,11 @@
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "compression-webpack-plugin": "^2.0.0",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "react-hot-loader": "^4.6.3",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
