--- a/package.json
+++ b/package.json
@@ -24,9 +24,18 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
     "compression-webpack-plugin": "^2.0.0",
+    "css-hot-loader": "^1.4.3",
+    "css-loader": "^2.1.0",
+    "cssnano": "^4.1.8",
     "file-loader": "^3.0.1",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
     "react-hot-loader": "^4.6.3",
+    "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
