--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "file-loader": "^3.0.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
