--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
+    "@types/react": "^16.7.20",
+    "@types/react-dom": "^16.0.11",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
@@ -39,6 +41,7 @@
     "react-hot-loader": "^4.6.3",
     "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
