--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
@@ -33,6 +34,7 @@
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
