--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@koa/cors": "2",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
