--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@koa/cors": "2",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/koa-router": "^7.0.38",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
