--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "styled-components": "^4.1.3"
@@ -22,6 +23,7 @@
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa-router": "^7.0.38",
+    "@types/koa-send": "^4.1.1",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
