--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "ora": "^3.0.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "styled-components": "^4.1.3"
@@ -27,6 +28,7 @@
     "@types/koa__cors": "^2.2.3",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
+    "@types/ora": "^3.0.0",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/webpack": "^4.4.23",
