--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@koa/cors": "2",
+    "@types/chalk": "^2.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa-router": "^7.0.38",
