--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
+    "koa-webpack": "^5.2.1",
     "ora": "^3.0.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "webpack-hot-server-middleware": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
