--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "koa-webpack": "^5.2.1",
+    "lodash": "^4.17.11",
     "ora": "^3.0.0",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
