--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/koa-send": "^4.1.1",
     "@types/koa-webpack": "^5.0.1",
     "@types/koa__cors": "^2.2.3",
+    "@types/lodash": "^4.14.120",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.18",
     "@types/ora": "^3.0.0",
