--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "apollo-client": "^2.4.12",
     "chalk": "^2.4.2",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
