--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.4.2",
     "apollo-client": "^2.4.12",
+    "apollo-link-http": "^1.5.9",
     "chalk": "^2.4.2",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
