--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
     "chalk": "^2.4.2",
+    "graphql": "^14.1.1",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
