--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-http": "^1.5.9",
     "chalk": "^2.4.2",
     "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
