--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@koa/cors": "2",
     "@types/chalk": "^2.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
+    "@types/graphql": "^14.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa-router": "^7.0.38",
     "@types/koa-send": "^4.1.1",
