--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link": "^1.2.6",
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
+    "apollo-link-ws": "^1.0.12",
     "chalk": "^2.4.2",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
@@ -24,6 +25,7 @@
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
     "styled-components": "^4.1.3",
+    "subscriptions-transport-ws": "^0.9.15",
     "webpack-hot-server-middleware": "^0.5.0"
   },
   "devDependencies": {
