--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
     "apollo-link-ws": "^1.0.12",
+    "apollo-utilities": "^1.1.2",
     "chalk": "^2.4.2",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
