--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link": "^1.2.6",
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
+    "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.12",
     "apollo-utilities": "^1.1.2",
     "chalk": "^2.4.2",
