--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.11",
     "ora": "^3.0.0",
     "react": "^16.8.0-alpha.1",
+    "react-apollo": "^2.4.0",
     "react-dom": "^16.8.0-alpha.1",
     "styled-components": "^4.1.3",
     "subscriptions-transport-ws": "^0.9.15",
