--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/ora": "^3.0.0",
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
+    "@types/react-helmet": "^5.0.8",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
