--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/styled-components": "^4.1.6",
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
