--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es5", "es6", "es7", "es2017", "ESNext", "dom"],
     "sourceMap": true,
     "jsx": "react",
+    "baseUrl": ".",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
