--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "paths": {
-      "@/*": ["src/**/*"],
-      "*": ["src/**/*"]
+      "@/*": ["src/*"],
+      "*": ["src/*"]
     },
     "declaration": false,
     "allowSyntheticDefaultImports": true,
