--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-apollo": "^2.4.0",
     "react-dom": "^16.8.0-alpha.1",
     "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3",
     "subscriptions-transport-ws": "^0.9.15",
     "webpack-hot-server-middleware": "^0.5.0"
