--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^16.7.20",
     "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-router-config": "^1.1.0",
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.1.6",
     "@types/webpack": "^4.4.23",
