--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
     "compression-webpack-plugin": "^2.0.0",
+    "cross-env": "^5.2.0",
     "css-hot-loader": "^1.4.3",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
