--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "postcss-preset-env": "^6.5.0",
     "react-hot-loader": "^4.6.3",
     "resolve-url-loader": "^3.0.0",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
+    "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-merge": "^4.2.1",
