--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@koa/cors": "2",
     "@types/chalk": "^2.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
+    "@types/dotenv": "^6.1.0",
     "@types/graphql": "^14.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa-router": "^7.0.38",
@@ -70,6 +71,7 @@
     "css-hot-loader": "^1.4.3",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
+    "dotenv": "^6.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
