--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "resolve-url-loader": "^3.0.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
+    "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
