--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotenv": "^6.2.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "koa2-history-api-fallback": "^0.0.5",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
