--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   },
