--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
+    "chunk-manifest-webpack-plugin": "^1.1.2",
     "compression-webpack-plugin": "^2.0.0",
     "cross-env": "^5.2.0",
     "css-hot-loader": "^1.4.3",
@@ -90,6 +91,7 @@
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   },
