--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
     "react-hot-loader": "^4.6.3",
