--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
