--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-link-ws": "^1.0.12",
     "apollo-utilities": "^1.1.2",
     "chalk": "^2.4.2",
+    "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.11",
