--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "apollo-link-ws": "^1.0.12",
     "apollo-utilities": "^1.1.2",
     "chalk": "^2.4.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "helmet": "^3.15.0",
     "lodash": "^4.17.11",
+    "lusca": "^1.6.1",
     "morgan": "^1.9.1",
     "ora": "^3.0.0",
     "react": "^16.8.0-alpha.1",
