--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.12",
     "apollo-utilities": "^1.1.2",
+    "body-parser": "^1.18.3",
     "chalk": "^2.4.2",
+    "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
