--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@types/chalk": "^2.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.5",
+    "@types/helmet": "^0.0.42",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/koa-router": "^7.0.38",
     "@types/koa-send": "^4.1.1",
@@ -58,6 +60,7 @@
     "@types/koa__cors": "^2.2.3",
     "@types/lodash": "^4.14.120",
     "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
     "@types/ora": "^3.0.0",
     "@types/react": "^16.7.20",
