--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@koa/cors": "2",
     "@types/chalk": "^2.2.0",
     "@types/compression-webpack-plugin": "^2.0.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
     "@types/graphql": "^14.0.5",
@@ -59,6 +61,7 @@
     "@types/koa-webpack": "^5.0.1",
     "@types/koa__cors": "^2.2.3",
     "@types/lodash": "^4.14.120",
+    "@types/lusca": "^1.5.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18",
