--- a/package.json
+++ b/package.json
@@ -47,12 +47,16 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@koa/cors": "2",
+    "@types/body-parser": "^1.17.0",
     "@types/chalk": "^2.2.0",
+    "@types/compression": "^0.0.36",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
+    "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.11",
     "@types/graphql": "^14.0.5",
     "@types/helmet": "^0.0.42",
     "@types/html-webpack-plugin": "^3.2.0",
