--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/plugin-proposal-decorators": "^7.2.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "@koa/cors": "2",
     "@types/body-parser": "^1.17.0",
     "@types/chalk": "^2.2.0",
