--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "test": "cross-env NODE_ENV=test PORT=8080 jest",
     "test:watch": "npm run test --watchAll",
     "test:coverage": "npm run test --coverage",
-    "start": "cross-env NODE_ENV=development PORT=6000 nodemon index.ts",
+    "start": "cross-env NODE_ENV=development nodemon index.ts",
     "start:prod": "cross-env NODE_ENV=production ts-node index.ts",
     "bs": "npm run clean && npm run build && npm run build:server && npm run start:prod",
     "lint": "tslint -e node_modules",
