--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3",
     "subscriptions-transport-ws": "^0.9.15",
-    "webpack-hot-server-middleware": "^0.5.0"
+    "webpack-hot-server-middleware": "^0.5.0",
+    "ws": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
