--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/webpack": "^4.4.23",
     "@types/webpack-merge": "^4.1.3",
     "@types/webpack-node-externals": "^1.6.3",
+    "@types/ws": "^6.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
