--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^5.2.0",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.3",
     "subscriptions-transport-ws": "^0.9.15",
     "webpack-hot-server-middleware": "^0.5.0",
     "ws": "^6.1.3"
